--- a/aitReminder.Wpf/aitReminder.Wpf.csproj
+++ b/aitReminder.Wpf/aitReminder.Wpf.csproj
@@ -14,6 +14,21 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -24,6 +39,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,6 +53,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,15 +73,42 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BusinessLogic\EventAggregator\EventAggregator.cs" />
+    <Compile Include="BusinessLogic\EventAggregator\ITypeEventAggregator.cs" />
+    <Compile Include="BusinessLogic\EventAggregator\ReminderIsSelectedEventAggregator.cs" />
+    <Compile Include="BusinessLogic\EventAggregator\RemindersManagerIsChangedEventAggregator.cs" />
+    <Compile Include="BusinessLogic\ReminderEventArgs.cs" />
+    <Compile Include="Commands\HelpMenuCommand.cs" />
+    <Compile Include="Commands\AboutMenuCommand.cs" />
+    <Compile Include="Commands\IOpenDialogProperty.cs" />
+    <Compile Include="Commands\ISaveAsDialogProperty.cs" />
+    <Compile Include="Commands\NewMenuCommand.cs" />
+    <Compile Include="Commands\RemoveReminderMenuCommand.cs" />
+    <Compile Include="Commands\SaveAsMenuCommand.cs" />
+    <Compile Include="Models\IReminder.cs" />
+    <Compile Include="Views\About.xaml.cs">
+      <DependentUpon>About.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddEditReminderForm.xaml.cs">
+      <DependentUpon>AddEditReminderForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\IMainWindow.cs" />
     <Compile Include="Views\IMenuView.cs" />
     <Compile Include="Views\IRemindersListView.cs" />
+    <Compile Include="Views\IRemindersStatusBarView.cs" />
     <Compile Include="Views\MenuView.xaml.cs">
       <DependentUpon>MenuView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ReminderNotification.xaml.cs">
+      <DependentUpon>ReminderNotification.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RemindersListView.xaml.cs">
       <DependentUpon>RemindersListView.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="Views\RemindersStatusBarView.xaml.cs">
+      <DependentUpon>RemindersStatusBarView.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -71,9 +116,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BusinessLogic\aitReminderPresenter.cs" />
+    <Compile Include="BusinessLogic\AitReminderPresenter.cs" />
     <Compile Include="BusinessLogic\IRemindersManager.cs" />
-    <Compile Include="BusinessLogic\OpenReminderService.cs" />
     <Compile Include="BusinessLogic\RemindersManager.cs" />
     <Compile Include="Commands\AddNewReminderMenuCommand.cs" />
     <Compile Include="Commands\CloseMenuCommand.cs" />
@@ -84,17 +128,33 @@
     <Compile Include="Commands\MenuCommand.cs" />
     <Compile Include="Commands\OpenMenuCommand.cs" />
     <Compile Include="Commands\SaveMenuCommand.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\About.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddEditReminderForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MenuView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\RemindersListView.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Views\ReminderNotification.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RemindersListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RemindersStatusBarView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -116,6 +176,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\aitReminder.Wpf.Models.Reminder.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -124,5 +185,24 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\clock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\repeat.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
